--- a/using jupyter/using_jupyter_(good).ipynb
+++ b/using jupyter/using_jupyter_(good).ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b05bc58",
+   "id": "ccea49bf",
    "metadata": {},
    "source": [
     "|Action|Shortcut|\n",
@@ -37,7 +37,9 @@
     "|Convert cell to Markdown|Esc + M|\n",
     "|Copy cell|Esc + C|\n",
     "|Paste cell|Esc + V|\n",
-    "|Merge cells|Esc + "
+    "|Merge cells|Esc + M|\n",
+    "|Delete cells|Esc + D + D|\n",
+    "|Show shortcuts|Esc + H|"
    ]
   },
   {
@@ -55,8 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Your code here\n"
+    "!conda install numpy"
    ]
   },
   {
@@ -82,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Your code here\n"
+    "!conda install -c conda-forge jupyter_contrib_nbextensions"
    ]
   },
   {
@@ -114,6 +114,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc39888a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit x = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34406dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "x = 10\n",
+    "y = 10\n",
+    "z = 10"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "27fcd9d9",
    "metadata": {},
@@ -130,19 +153,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5b5a6d7",
+   "metadata": {},
+   "source": [
+    "Go to Help then Edit keyboard shortcuts\n",
+    "Assigned (9,9) as a shortcut to the action Restart Kernel and run all cells\n",
+    "It works\n",
+    "Assigned (O) as a shortcut to the action Clear Cell Output\n",
+    "It works also"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd25bee0",
+   "id": "32b51f6a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# Your solution here\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
