--- a/using jupyter/using_jupyter_(need).ipynb
+++ b/using jupyter/using_jupyter_(need).ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fcdac7",
+   "id": "02ba7a8f",
    "metadata": {},
    "source": [
     "To run cell, press shift+start\n"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e27591",
+   "id": "cd1e9d3a",
    "metadata": {},
    "source": [
     "The ships hung in the sky in much the same way that bricks don't\n"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad20a591",
+   "id": "1581f0f8",
    "metadata": {},
    "source": [
     "The ships *hung in the sky* in much the same way that **bricks don't**.<sup>1</sup><sub>QUOTE</sub>\n"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aaf3101",
+   "id": "0568fe64",
    "metadata": {},
    "source": [
     "# The largest boi\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b046bd",
+   "id": "0bad7d56",
    "metadata": {},
    "source": [
     "```python\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43e3bc03",
+   "id": "06422773",
    "metadata": {},
    "source": [
     "[CM2112 AY22/23 Sem 2 Finals Answers.pdf](https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley)"
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2718012",
+   "id": "cba338ff",
    "metadata": {},
    "source": [
     "![](https://animecorner.me/wp-content/uploads/2022/11/bocchi-the-rock-anime-trailer.jpg)"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf26ba63",
+   "id": "c0e3a9c8",
    "metadata": {},
    "source": [
     "|A|B|C|\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9a3990",
+   "id": "4149c7be",
    "metadata": {},
    "source": [
     "1. francis chong\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00484f52",
+   "id": "c01c7f97",
    "metadata": {},
    "source": [
     "$$\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da004879",
+   "id": "64b54c46",
    "metadata": {},
    "source": [
     "**Quadratic Equations**\n",
@@ -267,7 +267,7 @@
     "\n",
     "**Discriminant**\n",
     "\n",
-    "The quantity $\\delta$ = $b^2$ - 4ac is called the **discriminant** of the equation and decides the nature of its solutions. The table below shows the various possibilities:\n",
+    "The quantity $\\Delta = b^2 - 4ac$ is called the **discriminant** of the equation and decides the nature of its solutions. The table below shows the various possibilities:\n",
     "\n",
     "|Discriminant|Roots|\n",
     "|:---|---:|\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ade4af7",
+   "id": "f6b64941",
    "metadata": {},
    "source": [
     "1. A repository is a record of changes made to a set of code\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0358a88",
+   "id": "82723b06",
    "metadata": {},
    "outputs": [],
    "source": []
