--- a/basics/basics_(good).ipynb
+++ b/basics/basics_(good).ipynb
@@ -1,1 +1,415 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Basics (Good)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 More Python Basics"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 Computers read = from Right to Left!"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Shorter and cleaner"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 Asking questions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.4 There is more to if"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.5 Python stores information in different formats or types."]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.6 Combining English and variables"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.7 Python can be a prima-donna."]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 Best Practices for Scientific Computing"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 Some tips"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 Getting help."]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 1 :  Bias for some heroes"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 2 :  Bias for some heroes, continues"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 3 :  Look for help to replace"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Basics (Good)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddec1eb",
+   "metadata": {},
+   "source": [
+    "## 1 More Python Basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1752c10",
+   "metadata": {},
+   "source": [
+    "### 1.1 Computers read = from Right to Left!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "724c7dfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 40\n",
+    "y = y + 2\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4092228",
+   "metadata": {},
+   "source": [
+    "### 1.2 Shorter and cleaner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c3b0d3b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 40\n",
+    "y += 2\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94cc8b85",
+   "metadata": {},
+   "source": [
+    "### 1.3 Asking questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "89a51f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GoodModules = [\"CM1102\", \"CM2112\", \"CM2122\", \"CM2133\", \"CM2143\"]\n",
+    "BadModules = [\"HSA1000\", \"HSS1000\", \"HSH1000\", \"GEA1000\", \"DTK1234\"]\n",
+    "\n",
+    "(\"DTK1234\" in GoodModules) or (\"CM1102\" in GoodModules)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d27914f",
+   "metadata": {},
+   "source": [
+    "### 1.4 There is more to if"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "40384525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time to S/U\n"
+     ]
+    }
+   ],
+   "source": [
+    "UselessMod = 'DTK1234'\n",
+    "\n",
+    "if UselessMod == 'DTK1234':\n",
+    "    print('time to S/U')\n",
+    "elif UselessMod == 'HSH1000':\n",
+    "    print('tbh not bad')\n",
+    "else:\n",
+    "    print('ez A+')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4db41d6d",
+   "metadata": {},
+   "source": [
+    "### 1.5 Python stores information in different formats or types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "923e0679",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 <class 'int'>\n",
+      "6.66 <class 'str'>\n",
+      "6.66 <class 'float'>\n",
+      "(6.66+0j) <class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(6.66)\n",
+    "print(x, type(x))\n",
+    "x = str(6.66)\n",
+    "print(x, type(x))\n",
+    "x = float(6.66)\n",
+    "print(x, type(x))\n",
+    "x = complex(6.66)\n",
+    "print(x, type(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e586652",
+   "metadata": {},
+   "source": [
+    "### 1.6 Combining English and variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9ff349f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "truly a reddit moment\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'reddit'\n",
+    "print(f\"truly a {name} moment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1973bd",
+   "metadata": {},
+   "source": [
+    "### 1.7 Python can be a prima-donna."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d2fd15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c70601a5",
+   "metadata": {},
+   "source": [
+    "## 2 Best Practices for Scientific Computing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e595e1d",
+   "metadata": {},
+   "source": [
+    "### 2.1 Some tips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f42e1bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8929af7e",
+   "metadata": {},
+   "source": [
+    "### 2.2 Getting help."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ed379d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e32cbcb",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 :  Bias for some heroes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c0973885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello BATMAN!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(name):\n",
+    "    if name == \"Batman\" or name == \"Black Widow\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    else:\n",
+    "        print(f\"Hello {name.lower()}!\")\n",
+    "\n",
+    "hello(\"Batman\")\n",
+    "\n",
+    "def hello(name):\n",
+    "    if name == \"Batman\":\n",
+    "        print(\"Hello BATMAN!\")\n",
+    "    elif name == \"Black Widow\":\n",
+    "        print(\"Hello BLACK WIDOW!\")\n",
+    "    else:\n",
+    "        print(\"Hello {name}!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be0a7470",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 :  Bias for some heroes, continues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b8c19b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello BATMAN!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(name):\n",
+    "    namemod = name.lower()\n",
+    "    if namemod == \"batman\" or namemod == \"black widow\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    else:\n",
+    "        print(f\"Hello {name.lower()}!\")\n",
+    "\n",
+    "hello(\"BatMan\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc746df3",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 :  Look for help to replace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e5078b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your mom gay lol\n",
+      "Your dad gay lol\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"Your mom gay lol\"\n",
+    "new_string = string.replace(\"mom\",\"dad\")\n",
+    "print(string)\n",
+    "print(new_string)\n",
+    "\n",
+    "\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
