--- a/basics/basics_(nice).ipynb
+++ b/basics/basics_(nice).ipynb
@@ -1,1 +1,264 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Basics (Nice)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 Beyond Python Basics"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 If if is not enough"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Ternary operators or Conditional Statements"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 Swapping values"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.4 Never compare floats directly"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.5 Operator precedance"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 Variables in Python"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 Variables in Python are just names"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 == is not the same as is"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Basics (Nice)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfe79146",
+   "metadata": {},
+   "source": [
+    "## 1 Beyond Python Basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5260bbd",
+   "metadata": {},
+   "source": [
+    "### 1.1 If if is not enough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7e8a7a5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Hero | Batman!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Batman'\n",
+    "\n",
+    "match name:\n",
+    "    case 'Batman':\n",
+    "        print(\"Hello Hero | Batman!\")\n",
+    "    case 'Robin':\n",
+    "        print(\"Hello Sidekick | Robin!\")\n",
+    "    case _:\n",
+    "        print('Hello World!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2f8aeb2",
+   "metadata": {},
+   "source": [
+    "### 1.2 Ternary operators or Conditional Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2c5d063e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sir\n"
+     ]
+    }
+   ],
+   "source": [
+    "nationality = 'Thai'\n",
+    "\n",
+    "greeting = \"Don't eat my dog!\" if nationality == 'Chinese' else \"sir\"\n",
+    "\n",
+    "print(greeting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75984758",
+   "metadata": {},
+   "source": [
+    "### 1.3 Swapping values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cc348f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = 1, 2\n",
+    "a, b = b, a\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed1ef88",
+   "metadata": {},
+   "source": [
+    "### 1.4 Never compare floats directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c6e38bb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.29999999999999999\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0.1\n",
+    "a3 = 0.3\n",
+    "a*3 == a3\n",
+    "\n",
+    "print(f\"{0.3:1.17f}\")\n",
+    "\n",
+    "eps = 1E-10\n",
+    "print(abs(a*3 - a3)<eps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "114f0da8",
+   "metadata": {},
+   "source": [
+    "### 1.5 Operator precedance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb2fa9b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fda6ca9d",
+   "metadata": {},
+   "source": [
+    "## 2 Variables in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63d403f8",
+   "metadata": {},
+   "source": [
+    "### 2.1 Variables in Python are just names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1198e238",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [1, 2, 3], y: [1, 2, 3]\n",
+      "x: 2203527348464, y: 2203527348464, 1: 2203527348464\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2]\n",
+    "y = x\n",
+    "y.append(3)\n",
+    "\n",
+    "print(f\"x: {x}, y: {y}\")\n",
+    "\n",
+    "x = 1\n",
+    "y = 1\n",
+    "\n",
+    "print(f\"x: {id(x)}, y: {id(y)}, 1: {id(1)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6542aac",
+   "metadata": {},
+   "source": [
+    "### 2.2 == is not the same as is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd3f8b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
