--- a/storing data/storing_data_(good).ipynb
+++ b/storing data/storing_data_(good).ipynb
@@ -1,1 +1,360 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 Subsetting: Indexing and Slicing"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 Indexing & Slicing 1D (Lists & Arrays)"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Subsetting by masking (Arrays only)"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 Indexing & Slicing 2D Lists"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.4 Indexing & Slicing 2D Arrays"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.5 Growing lists"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 Some loose ends"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 Tuples"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 Be VERY careful when copying"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 1 :  Total recall?"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 2 :  Show me the \u2018odd\u2019 letters"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f290f1a",
+   "metadata": {},
+   "source": [
+    "## 1 Subsetting: Indexing and Slicing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aecfe6d4",
+   "metadata": {},
+   "source": [
+    "### 1.1 Indexing & Slicing 1D (Lists & Arrays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "09dde3d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['f6', 'g7', 'h8', 'i9', 'j10'], dtype='<U3')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "py_list=[\"a1\", \"b2\", \"c3\", \"d4\", \"e5\",\n",
+    "         \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "np_array=np.array(py_list)\n",
+    "\n",
+    "x = np_array\n",
+    "\n",
+    "x[5:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99012bd5",
+   "metadata": {},
+   "source": [
+    "### 1.2 Subsetting by masking (Arrays only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ef768b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True  True  True  True  True  True  True]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "my_mask = np_array > 3\n",
+    "print(my_mask)\n",
+    "\n",
+    "np_array[my_mask]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ecf9b90",
+   "metadata": {},
+   "source": [
+    "### 1.3 Indexing & Slicing 2D Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a226ef0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 'G']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_2d = [[1, \"A\"], [2, \"B\"], [3, \"C\"], [4, \"D\"],\n",
+    "              [5, \"E\"], [6, \"F\"], [7, \"G\"], [8, \"H\"],\n",
+    "              [9, \"I\"], [10, \"J\"]]\n",
+    "\n",
+    "py_list_2d[6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6452495",
+   "metadata": {},
+   "source": [
+    "### 1.4 Indexing & Slicing 2D Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "88b86def",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'E'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array_2d = np.array([[1, \"A\"], [2, \"B\"], [3, \"C\"], [4, \"D\"],\n",
+    "                        [5, \"E\"], [6, \"F\"], [7, \"G\"], [8, \"H\"],\n",
+    "                        [9, \"I\"], [10, \"J\"]])\n",
+    "\n",
+    "np_array_2d[4,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7554e9d6",
+   "metadata": {},
+   "source": [
+    "### 1.5 Growing lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0637f236",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[1]\n",
+    "x.append(2)\n",
+    "x.append(3)\n",
+    "x.append(4)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0318ba93",
+   "metadata": {},
+   "source": [
+    "## 2 Some loose ends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27596843",
+   "metadata": {},
+   "source": [
+    "### 2.1 Tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b89842ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=(1,2,3)\n",
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06822717",
+   "metadata": {},
+   "source": [
+    "### 2.2 Be VERY careful when copying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0a85bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[1, 2, 3]\n",
+    "y=x           # DON'T do this!\n",
+    "z=x           # DON'T do this!\n",
+    "\n",
+    "x=[1, 2, 3]\n",
+    "y=x.copy()\n",
+    "z=x.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bf3d7ea",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 :  Total recall?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379467ab",
+   "metadata": {},
+   "source": [
+    "|Term|Description|\n",
+    "|:---|---:|\n",
+    "|Subsetting|Selecting a subset of the given data|\n",
+    "|Indexing|Selecting 1 element|\n",
+    "|Slicing|Selecting a range of elements|\n",
+    "|Masking|Showing only a selected range of elements|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f21ba92",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 :  Show me the ‘odd’ letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0c59fdf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A' 'C' 'E' 'G' 'I']\n"
+     ]
+    }
+   ],
+   "source": [
+    "np_array_2d = np.array([[1, \"A\"], [3, \"C\"], [2, \"B\"], [4, \"D\"],\n",
+    "                        [5, \"E\"], [7, \"G\"], [6, \"F\"], [8, \"H\"],\n",
+    "                        [10, \"J\"], [9, \"I\"]])\n",
+    "\n",
+    "array1 = np_array_2d[:,0]\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "array1 = array1.astype(int)\n",
+    "\n",
+    "array2 = array1 %2\n",
+    "\n",
+    "mask = array2 == 1\n",
+    "\n",
+    "odd_no = np_array_2d[mask,1]\n",
+    "\n",
+    "print(odd_no)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
