--- a/functions/functions_(good).ipynb
+++ b/functions/functions_(good).ipynb
@@ -1,1 +1,321 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Good)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 Check, balances and contingencies"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 assert"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 try-except"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 Some loose ends"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 Positional, keyword and default arguments"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 Docstrings"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.3 Function are first class citizens"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.4 More unpacking"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 1 :  A better calculator I"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 2 :  A better calculator II"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Good)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67949321",
+   "metadata": {},
+   "source": [
+    "## 1 Check, balances and contingencies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b614c62",
+   "metadata": {},
+   "source": [
+    "### 1.1 assert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1509954c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 3\n",
+    "assert x >= 0, \"x sucks\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb3fa040",
+   "metadata": {},
+   "source": [
+    "### 1.2 try-except"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "82b12444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give me a number and I will calculate its square.yes\n",
+      "yes is not a number dumbass!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    number=input(\"Give me a number and I will calculate its square.\")\n",
+    "    square=int(number)**2\n",
+    "    print(f'The square of {number} is {square}!')\n",
+    "except:\n",
+    "    print(f\"{number} is not a number dumbass!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "090f7c1d",
+   "metadata": {},
+   "source": [
+    "## 2 Some loose ends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e36fc93",
+   "metadata": {},
+   "source": [
+    "### 2.1 Positional, keyword and default arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d85133f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def wtf(a, b, c=1):\n",
+    "    return a + 10*b + 100*c\n",
+    "\n",
+    "wtf(6,9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f568da82",
+   "metadata": {},
+   "source": [
+    "### 2.2 Docstrings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2b06f8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function wtfisthis in module __main__:\n",
+      "\n",
+      "wtfisthis(a, b, c)\n",
+      "    Idk how this code works either just google bah\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wtfisthis(a,b,c):\n",
+    "    '''\n",
+    "    Idk how this code works either just google bah\n",
+    "    '''\n",
+    "    return a + 10*b + 100*c\n",
+    "\n",
+    "help(wtfisthis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae1f9198",
+   "metadata": {},
+   "source": [
+    "### 2.3 Function are first class citizens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67f154eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def my_function(angle, trig_function):\n",
+    "        return trig_function(angle)\n",
+    "\n",
+    "# Let's use the function\n",
+    "my_function(np.pi/2, np.sin)        \n",
+    "#> 1.0\n",
+    "my_function(np.pi/2, np.cos)        \n",
+    "#> 6.123233995736766e-17\n",
+    "my_function(np.pi/2, lambda x: np.cos(2*x))  \n",
+    "#> -1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "086b8120",
+   "metadata": {},
+   "source": [
+    "### 2.4 More unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ae2d7f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 [2, 3, 4] 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x, *y, z = np.array([1, 2, 3, 4, 5])\n",
+    "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69d3040b",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 :  A better calculator I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e3bf9e59",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "u done fucked up",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m y\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m64\u001b[39m, \u001b[38;5;241m66\u001b[39m, \u001b[38;5;241m56\u001b[39m, \u001b[38;5;241m24\u001b[39m, \u001b[38;5;241m73\u001b[39m])\n\u001b[0;32m      7\u001b[0m z \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m])\n\u001b[1;32m----> 9\u001b[0m \u001b[43mdivide\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43mz\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[30], line 2\u001b[0m, in \u001b[0;36mdivide\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivide\u001b[39m(x,y):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m (y \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mall(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mu done fucked up\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\u001b[38;5;241m/\u001b[39my\n",
+      "\u001b[1;31mAssertionError\u001b[0m: u done fucked up"
+     ]
+    }
+   ],
+   "source": [
+    "def divide(x,y):\n",
+    "    assert (y != 0).all(), \"u done fucked up\"\n",
+    "    return x/y\n",
+    "\n",
+    "x=np.array([36, 34, 44, 76, 27])\n",
+    "y=np.array([64, 66, 56, 24, 73])\n",
+    "z = np.array([0,1,2,3,4])\n",
+    "    \n",
+    "divide(x,z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af432211",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 :  A better calculator II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "72511ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cannot divide by 0 man\n"
+     ]
+    }
+   ],
+   "source": [
+    "def divide(x,y):\n",
+    "    try:\n",
+    "        assert (y != 0).all(), \"no\"\n",
+    "        return x/y\n",
+    "    except:\n",
+    "        print(\"cannot divide by 0 man\")\n",
+    "        \n",
+    "\n",
+    "x=np.array([36, 34, 44, 76, 27])\n",
+    "y=np.array([64, 66, 56, 24, 73])\n",
+    "z = np.array([0,1,2,3,4])\n",
+    "    \n",
+    "divide(x,z)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
