--- a/functions/functions_(need).ipynb
+++ b/functions/functions_(need).ipynb
@@ -1,1 +1,441 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 User defined functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 Named functions that return"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Named functions that don\u2019t return"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 Anonymous functions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.4 Optional arguments"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 The importance of functions?"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 An argument for functions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 A word of caution"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 1 :  Do you know why?"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 2 :  Calculator functions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 3 :  max_info() with NumPy"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78be32bd",
+   "metadata": {},
+   "source": [
+    "## 1 User defined functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6acb9bc",
+   "metadata": {},
+   "source": [
+    "### 1.1 Named functions that return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b08bd1fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fuck u understand'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def greeting(name):\n",
+    "    if name == \"encik\":\n",
+    "        return 'fuck u understand'\n",
+    "    else:\n",
+    "        return f'good morning {name}!'\n",
+    "\n",
+    "greeting(\"encik\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "252ee48b",
+   "metadata": {},
+   "source": [
+    "### 1.2 Named functions that don’t return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6fbdf4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbba38a4",
+   "metadata": {},
+   "source": [
+    "### 1.3 Anonymous functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1c3c95c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fuck u udhaya'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function = lambda name: f'fuck u {name}'\n",
+    "\n",
+    "function(name = \"udhaya\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "508b37af",
+   "metadata": {},
+   "source": [
+    "### 1.4 Optional arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "63ed180c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fuck u understand'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def greeting(name = 'bruh'):\n",
+    "    if name == 'encik':\n",
+    "        return \"fuck u understand\"\n",
+    "    else:\n",
+    "        return f\"dumbass {name}\"\n",
+    "\n",
+    "greeting(name = 'encik')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0c0996b",
+   "metadata": {},
+   "source": [
+    "## 2 The importance of functions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3717862",
+   "metadata": {},
+   "source": [
+    "### 2.1 An argument for functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec87202a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b1fa68f",
+   "metadata": {},
+   "source": [
+    "### 2.2 A word of caution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce926a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b8ea10d",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 :  Do you know why?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ace8ca55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello sum fuk!'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def greeting(name):\n",
+    "    if name == 'Batman':\n",
+    "        return 'Hello Batman! So, nice to meet you!'\n",
+    "    return f'Hello {name}!'\n",
+    "\n",
+    "greeting(name = 'sum fuk')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60db7b63",
+   "metadata": {},
+   "source": [
+    "The function is given a default return case for the condition that name does not = Batman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f34fcda",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 :  Calculator functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ad32571f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(x,y):\n",
+    "    return x+y\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "x=np.array([36, 34, 44, 76, 27])\n",
+    "y=np.array([64, 66, 56, 24, 73])\n",
+    "\n",
+    "add(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3793729e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-28, -32, -12,  52, -46])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def subtract(x,y):\n",
+    "    return x-y\n",
+    "\n",
+    "x=np.array([36, 34, 44, 76, 27])\n",
+    "y=np.array([64, 66, 56, 24, 73])\n",
+    "\n",
+    "subtract(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8937e26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2304, 2244, 2464, 1824, 1971])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply(x,y):\n",
+    "    return x*y\n",
+    "\n",
+    "x=np.array([36, 34, 44, 76, 27])\n",
+    "y=np.array([64, 66, 56, 24, 73])\n",
+    "\n",
+    "multiply(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d9b9b448",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'you done fucked up'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def divide(x,y):\n",
+    "    if (y == 0).any():\n",
+    "        return \"you done fucked up\"\n",
+    "    else:\n",
+    "        return x/y\n",
+    "\n",
+    "x=np.array([36, 34, 44, 76, 27])\n",
+    "y=np.array([64, 66, 56, 24, 73])\n",
+    "z = np.array([0,1,2,3,4])\n",
+    "    \n",
+    "divide(x,z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e7d0c32",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 :  max_info() with NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b4ceb595",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array = np.array([69,12,34,65,78])\n",
+    "np.argmax(test_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "82666eac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(83, 2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "numbers = [40, 27, 83, 44, 74, 51, 76, 77, 10, 49]\n",
+    "\n",
+    "def max_info(numbers):\n",
+    "    return np.max(numbers), np.argmax(numbers)\n",
+    "\n",
+    "max_info(numbers)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
