--- a/loops/loops_(need).ipynb
+++ b/loops/loops_(need).ipynb
@@ -202,25 +202,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "afa6729e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "9\n",
-      "25\n",
-      "49\n",
-      "81\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 9, 25, 49, 81]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "squared=[]\n",
     "for i in range(1,10,2):\n",
-    "    print(i**2)"
+    "    squared.append(i**2)\n",
+    "squared"
    ]
   },
   {
