done mostly i think

--- a/random numbers/random_numbers_(need).ipynb
+++ b/random numbers/random_numbers_(need).ipynb
@@ -497,46 +497,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 127,
    "id": "6809a4da",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37\n",
+      "0.5413871073455665\n"
+     ]
     }
    ],
    "source": [
-    "def carbon(C=1, probability=.9889):\n",
+    "def carbon(C=27, probability=.9889):\n",
     "    \n",
     "    results = np.random.rand(C)\n",
     "    C13 = np.sum(results > probability)\n",
     "    return C13\n",
     "\n",
-    "C = 1\n",
+    "C = 27\n",
     "C13 = carbon(C, probability = .9889)\n",
     "\n",
-    "no_of_repeats = 27\n",
-    "result = [carbon(C=1) for _ in range(no_of_repeats)]\n",
-    "no_of_C13, C13_counts = np.unique(result, return_counts=True)\n",
+    "result = [carbon(C=27) for _ in range(100)]\n",
     "\n",
-    "np.mean(no_of_C13)\n",
-    "np.std(no_of_C13)"
+    "print(np.mean(result))\n",
+    "print(np.std(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "46e4c995",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(C13 == 0).mean()"
+   ]
   }
  ],
  "metadata": {
